--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import './tailwind.css';
+@import "./tailwind.css";
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
